syntax = "proto3";

package com.example.proto;

option java_multiple_files = true;
option java_package = "com.example.proto";
option java_outer_classname = "ProblemProto";

// Service để validate và tạo bản sao problem
service ProblemService {
  rpc ValidateAndCloneProblem(ValidateAndCloneProblemRequest) returns (ValidateAndCloneProblemResponse);
}

message ValidateAndCloneProblemRequest {
  string problem_id = 1;
  int64 contest_id = 2;
  int64 userId = 3;
}

message ValidateAndCloneProblemResponse {
  bool success = 1;
  string new_problem_id = 2;
  string message = 3;
  string error_code = 4;
}